base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: helloweb-service
          servicePort: 8080
